# otus-cpp-hw-1

./: .travis.yml  CMakeLists.txt  lib.cpp  main.cpp
